# openrouter-king

./: .env.optimized  .gitignore  CHANGELOG.md  Dockerfile.optimized  ERROR_FIXES.md  GITHUB_UPLOAD_GUIDE.md  OPTIMIZATION_GUIDE.md  README.md  Task_Analysis.md  ULTIMATE_OPTIMIZATION_SUMMARY.md  add_user_keys.py  app.py  check-status.sh  deploy.sh  docker-compose.optimized.yml  env.example  fix-all-keys.py  fix-gemini-keys.py  fix-running-issues.sh  install.md  pyproject.toml  quick-start.bat  quick-start.sh  requirements.txt  requirements_optimized.txt  run.py  run.sh  safe_upload.bat  start-background.sh  stop.sh  validate_user_keys.py  vercel.json  web_scanner.py  web_scanner.service.example  日志问题分析.md
.claude/: settings.local.json
api/: app.py  index.py
app/: hajimi_king.py  hajimi_king_optimized.py
common/: config.py
static/css/: app.css  style.css
static/js/: app.js
templates/: index.html
utils/: async_scanner.py  concurrent_validator.py  db_manager.py  diagnostic.py  file_manager.py  github_utils_enhanced.py  openrouter_validator.py  secure_logger.py  session_manager.py  stats_reporter.py  token_manager.py  web_monitor.py
